--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,28 @@
   <link rel="stylesheet" type="text/css" href="assests/style.css">
 </head>
 <body>
-  <b>Bonjour !</b>
+  <ul>
+					<li><a href="#">Acceuil</a></li>
+					<li><a href="#">CV</a></li>
+					<li><a href="#">Centres d'intérêts</a></li>
+          <li><a href="#">Gallerie d'images</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+  <p>
+    Bonjour, je m'appelle Romain SIMON j'ai 18 ans et je suis actuellement en 1ère année de DUT Informatique à l'IUT Sénart-Fontainebleau (localisation sur google map).
+    Ce site a été crée dans le but d'un projet donné en cours.
+    Vous pourrez retrouver mon CV, mes centres d'intêrets ainsi qu'une gallerie d'image qui permettent d'illustrer mes centres d'intérêts, ainsi qu'un formulaire de contact si vous voulez me contacter. 
+    Ce site vous permettra donc d'en apprendre plus sur moi. 
+  </p>
+  <a href="https://www.facebook.com/romain.simon.718">
+  <img src="./assets/facebook.png">
+  </a>
+  <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png">
+  </a>
+  <a href="https://plus.google.com/u/0/100949654576113984046">
+  <img src="./assets/Google.png">
+  </a>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1318.5518310986395!2d2.5627273457269872!3d48.62699834662821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e5e399a2852b77%3A0xd4baa205320418fa!2sIUT+S%C3%A9nart+Fontainebleau!5e0!3m2!1sfr!2sfr!4v1483712081032" width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
