--- a/page2.html
+++ b/page2.html
@@ -2,10 +2,44 @@
   <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Page d'acceuil</title>
+  <title>CV</title>
   <link rel="stylesheet" type="text/css" href="assests/style.css">
 </head>
 <body>
-  <b>Bonjour !</b>
+  <p>
+  FORMATIONS
+
+● DUT Informatique, 2016 – 2018, IUT Sénart-Fontainebleau, site de Lieusaint
+
+● Baccalauréat Scientifique Spécialité Physique-Chimie mention Bien (2016),
+lycée Talma, Brunoy
+
+● Anglais : niveau scolaire 
+Sept jours en famille d’accueil à Cardiff (Pays de Galles-voyage scolaire 2012)
+
+● Espagnol : niveau scolaire 
+Sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)
+  </p>
+  <p>
+  COMPÉTENCES
+
+●   Informatique : maîtrise d’Open Office (Texte, Classeur, Présentation), web
+●   Maîtrise du langage C, et des bases de données
+  </p>
+  <p>
+  EXPÉRIENCES PROFESSIONNELLES
+
+● Baby-sitting occasionnel
+● Stage de 3ème chez un kinésithérapeute : standard téléphonique, secrétariat, aide aux soins (janvier 2013)
+  </p>
+  <p>
+  CENTRES D’INTÉRÊTS
+
+● Handball en club (Brunoy)
+● Musique (Pop, RnB)
+● Cinéma/Séries	
+● Voyages (Italie – 2012, Crète – 2015)
+  </p>
+  </b>
 </body>
 </html>
