--- a/page2.html
+++ b/page2.html
@@ -6,40 +6,43 @@
   <link rel="stylesheet" type="text/css" href="assests/style.css">
 </head>
 <body>
-  <p>
-  FORMATIONS
+  <ul>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target="">Acceuil</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target="">CV</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target="">Centres d'intérêts</a></li>
+          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Gallerie d'images</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
+	</ul>
+  <ul><b>FORMATIONS</b>
 
-● DUT Informatique, 2016 – 2018, IUT Sénart-Fontainebleau, site de Lieusaint
+<li>DUT Informatique, 2016 – 2018, IUT Sénart-Fontainebleau, site de Lieusaint</li>
+<li>Baccalauréat Scientifique Spécialité Physique-Chimie mention Bien (2016), lycée Talma, Brunoy</li>
+<li>Anglais : niveau scolaire 
+Sept jours en famille d’accueil à Cardiff (Pays de Galles-voyage scolaire 2012)</li>
+<li>Espagnol : niveau scolaire 
+Sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)</li>
+  </ul>
+  
+  <ul><b>COMPÉTENCES</b>
 
-● Baccalauréat Scientifique Spécialité Physique-Chimie mention Bien (2016),
-lycée Talma, Brunoy
+<li>Informatique : maîtrise d’Open Office (Texte, Classeur, Présentation), web</li>
+<li>Maîtrise du langage C, et des bases de données</li>
+    
+  </ul>
+  <ul><b>EXPÉRIENCES PROFESSIONNELLES</b>
 
-● Anglais : niveau scolaire 
-Sept jours en famille d’accueil à Cardiff (Pays de Galles-voyage scolaire 2012)
+<li>Baby-sitting occasionnel</li>
+<li>Stage de 3ème chez un kinésithérapeute : standard téléphonique, secrétariat, aide aux soins (janvier 2013)</li>
+  </ul>
+  
+  <ul><b>CENTRES D’INTÉRÊTS</b>
 
-● Espagnol : niveau scolaire 
-Sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)
-  </p>
-  <p>
-  COMPÉTENCES
-
-●   Informatique : maîtrise d’Open Office (Texte, Classeur, Présentation), web
-●   Maîtrise du langage C, et des bases de données
-  </p>
-  <p>
-  EXPÉRIENCES PROFESSIONNELLES
-
-● Baby-sitting occasionnel
-● Stage de 3ème chez un kinésithérapeute : standard téléphonique, secrétariat, aide aux soins (janvier 2013)
-  </p>
-  <p>
-  CENTRES D’INTÉRÊTS
-
-● Handball en club (Brunoy)
-● Musique (Pop, RnB)
-● Cinéma/Séries	
-● Voyages (Italie – 2012, Crète – 2015)
-  </p>
+<li>Handball en club (Brunoy)</li>
+<li>Musique (Pop, RnB)</li>
+<li>Cinéma/Séries</li>
+<li>Voyages (Italie – 2012, Crète – 2015)</li>
+    
+  </ul>
   </b>
 </body>
 </html>
