--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
 					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target="">Acceuil</a></li>
 					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target="">CV</a></li>
 					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target="">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Gallerie d'images</a></li>
+          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Galerie d'images</a></li>
 					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
 	</ul>
 </body>
