--- a/page4.html
+++ b/page4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Galerie d'images</title>
-  <link rel="stylesheet" type="text/css" href="assests/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
   <ul>
@@ -13,5 +13,6 @@
           <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Galerie d'images</a></li>
 					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
 	</ul>
+
 </body>
 </html>
