--- a/page5.html
+++ b/page5.html
@@ -3,15 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <title>Contact</title>
-  <link rel="stylesheet" type="text/css" href="assests/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
   <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target="">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target="">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target="">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
+          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
 	</ul>
+	
+	<form action="http://www.iut-fbleau.fr/sitebp/post.php" method="get">
+		<div>
+			<label for="nom">Nom :</label>
+			<input type="text" id="nom" required />
+		</div>
+		<div>
+			<label for="prénom">Prénom :</label>
+    	<input type="text" id="prénom" required />
+		</div>
+		<div>
+			<label for="date">Date de naissance :</label>
+    	<input type="date" id="date" />
+		</div>
+		<div>
+    	<label for="mail">Email :</label>
+    	<input type="email" id="mail" required />
+		</div>
+		<div>
+			<label for="avis">Notez ce site :</label>
+			<input type="range" min="0" max="10" step="1" id="avis" />
+		</div>
+		<div>
+			<label for="message">Message :</label>
+    	<textarea name="message" id="message"></textarea>
+		</div>
+    <input type="submit" name="soumission" value="Submit" />
+    <input type="reset" name="soumission" value="Reset" />
+	</form>
 </body>
 </html>
