--- a/page1.html
+++ b/page1.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>Page d'acceuil</title>
-  <link rel="stylesheet" type="text/css" href="assests/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
   <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target="">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target="">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target="">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
+          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
 	</ul>
+	<img src="./assets/Moi.JPG" alt=" " id="moi" />
   <p>
     Bonjour, je m'appelle Romain SIMON j'ai 18 ans et je suis actuellement en 1ère année de DUT Informatique à l'IUT Sénart-Fontainebleau (localisation sur google map).
     Ce site a été crée dans le but d'un projet donné en cours.
@@ -20,7 +21,7 @@
     Ce site vous permettra donc d'en apprendre plus sur moi. 
   </p>
   <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
-  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="social">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
   </a>
   <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
   <img src="./assets/Google.png" id="social">
