--- a/page3.html
+++ b/page3.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>Centres d'intérêts</title>
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
   <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target="">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target="">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target="">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
+          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
 	</ul>
-  <ol><i><b>Séries</b></i>
+  <ol><u><b>Séries</b></u>
     <li><b>Game of Thrones</b> : série créée par David Benioff. Sur le continent de Westeros dirigé par le roi Robert Baratheon, après le décès du conseiller du roi tout le monde envisage sa chance d'arriver sur le trône de fer. <i>6 saisons</i></li>
     <li><b>Orange is the New Black</b> : série Netflix créée par Jenji Kohan. Piper Chapman, citoyenne ordinaire est rattrapée par ces crimes et arrivent dans la prison pour femmes de Litchfield où elle y découvre des femmes de tous les genres. <i>4 saisons</i></li>
     <li><b>Stranger Things</b> : série Netflix créée par les frères Duffer. Dans une petite ville de l'Indiana, à Hawkins, un groupe de jeunes adolescents va être témoin d'évènement ... étrange. <i>1 saison</i></li>
@@ -22,28 +22,28 @@
     <li><i>Et bien d'autres ...</i></li>
   </ol>
   
-  <ol><i><b>Films</b></i>
+  <ol><u><b>Films</b></u>
     <li><b>Harry Potter</b> : séries de 8 films fantastiques basés sur les livres de J.K Rowling racontant l'histoire d'Harry Potter à l'école de magie Poudlard.</li>
     <li><b>Avengers</b> : série de 2 films Marvel où on peut suivre les aventures des Avengers : un groupe de soldats dotés d'incroyables capacités.</li>
     <li><b>X-Men</b> : série de 7 films des studios Marvel, Charles Xavier a crée une école pour surdouée qui ne sont autres que des mutants avec de grands pouvoirs. Nous suivons leur combat contre les humains qui veulent les détruiren ou même contre d'autres mutants.</li>
     <li><i>Et bien d'autres ....</i></li>
   </ol>
   
-  <ol><i><b>Musique</b></i>
+  <ol><u><b>Musique</b></u>
     <li><b>Sia</b> : chanteuse d'origine Australienne qui a interprétée notamment : <i>Chandelier</i>, <i>Cheap Thrills</i> ou plus récemment <i>The Greatest</i>.</li>
     <li><b>Avicii</b> : DJ d'origine Suédoise qui a créées différentes musiques comme : <i>Hey Brother</i>, <i>Wake Me Up</i> ou encore <i>The Nights</i>.</li>
 		<li><b>LP</b> : chanteuse d'origine Américaine avec principalement sa chanson <i>Muddy Waters</i> reprise dans la série Orange is the New Black.</li>
     <li><b>Twenty One Pilots</b> : groupe d'origine Américaine qui ont créées : <i>Stressed Out</i>, <i>Ride</i> ou encore une musique pour le film Suicide Squad : <i>Heathens</i>.</li>
   </ol>
   
-  <ol><i><b>Jeux Vidéos</b></i>
+  <ol><u><b>Jeux Vidéos</b></u>
     <li><b>Tera</b> : MMORPG d'origine Coréeenne où nous pouvons faire évoluer notre personnage dans un monde Fantastique.</li>
     <li><b>League of Legends</b> : MOBA développé par la société RIOT Games qui rassemble plusieurs personnes dans une arène de combat où s'affrontent leurs champions.</li>
     <li><b>Overwatch</b> : FPS créer par la société Blizzard où des combattans s'affrontent à l'aide d'armes et capacités révolutionnaires.</li>
   </ol>
   
   <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
-  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="social">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
   </a>
   <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
   <img src="./assets/Google.png" id="social">
