--- a/page5.html
+++ b/page5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Contact</title>
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
   <ul>
@@ -42,5 +42,12 @@
     <input type="submit" name="soumission" value="Submit" />
     <input type="reset" name="soumission" value="Reset" />
 	</form>
+	
+	<a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
+  	<img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
+  </a>
+  <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
+  	<img src="./assets/Google.png" id="social">
+  </a>
 </body>
 </html>
