--- a/page2.html
+++ b/page2.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <title>CV</title>
-  <link rel="stylesheet" type="text/css" href="assests/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
   <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target="">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target="">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target="">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
+          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
 	</ul>
   <ul><b>FORMATIONS</b>
 
@@ -44,7 +44,7 @@ Sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)</li>
     
   </ul>
   <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
-  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="social">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
   </a>
   <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
   <img src="./assets/Google.png" id="social">
