--- a/page4.html
+++ b/page4.html
@@ -3,16 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <title>Galerie d'images</title>
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
   <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target="">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target="">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target="">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target="">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target="">Contact</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
+          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
+					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
 	</ul>
+	<table>
+	<tr>
+		<td><img src="./assets/galerie/serie/GoT1.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/GoT2.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/OITNB1.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/OITNB2.png" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/ST1.jpg" alt="" id="image" /></td>
+	</tr>	
+	<tr>
+		<td><img src="./assets/galerie/serie/ST2.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/The1001.png" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/The1002.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/TheCrown1.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/serie/TheCrown2.jpg" alt="" id="image" /></td>
+	</tr>
+	<tr>
+		<td><img src="./assets/galerie/film/AV1.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/film/AV2.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/film/HP1.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/film/HP2.jpg" alt="" id="image" /></td>
+		<td><img src="./assets/galerie/film/XM1.jpg" alt="" id="image" /></td>
+	</tr>
+	</table>
 
+<a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
+</a>
+<a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
+  <img src="./assets/Google.png" id="social">
+</a>
 </body>
 </html>
