--- a/page2.html
+++ b/page2.html
@@ -3,46 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <title>CV</title>
-  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/style.css">
 </head>
 <body>
-  <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
-	</ul>
-  <ul><b>FORMATIONS</b>
+	<nav class="menu">
+  	<ul>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" " id="menu">Acceuil</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" " id="menu">CV</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" " id="menu">Centres d'intérêts</a></li>
+          <li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" " id="menu">Galerie d'images</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" " id="menu">Contact</a></li>
+		</ul>
+	</nav>
+	<p>
+  <ul class="cv"><b>FORMATIONS</b>
 
-<li>DUT Informatique, 2016 – 2018, IUT Sénart-Fontainebleau, site de Lieusaint</li>
-<li>Baccalauréat Scientifique Spécialité Physique-Chimie mention Bien (2016), lycée Talma, Brunoy</li>
-<li>Anglais : niveau scolaire 
-Sept jours en famille d’accueil à Cardiff (Pays de Galles-voyage scolaire 2012)</li>
-<li>Espagnol : niveau scolaire 
-Sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)</li>
+		<li>DUT Informatique, 2016 – 2018, IUT Sénart-Fontainebleau, site de Lieusaint</li>
+		<li>Baccalauréat Scientifique Spécialité Physique-Chimie mention Bien (2016), lycée Talma, Brunoy</li>
+		<li>Anglais : niveau scolaire 
+				Sept jours en famille d’accueil à Cardiff (Pays de Galles-voyage scolaire 2012)</li>
+		<li>Espagnol : niveau scolaire 
+				Sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)</li>
   </ul>
   
-  <ul><b>COMPÉTENCES</b>
+  <ul class="cv"><b>COMPÉTENCES</b>
 
-<li>Informatique : maîtrise d’Open Office (Texte, Classeur, Présentation), web</li>
-<li>Maîtrise du langage C, et des bases de données</li>
+		<li>Informatique : maîtrise d’Open Office (Texte, Classeur, Présentation), web</li>
+		<li>Maîtrise du langage C, et des bases de données</li>
     
   </ul>
-  <ul><b>EXPÉRIENCES PROFESSIONNELLES</b>
+  <ul class="cv"><b>EXPÉRIENCES PROFESSIONNELLES</b>
 
-<li>Baby-sitting occasionnel</li>
-<li>Stage de 3ème chez un kinésithérapeute : standard téléphonique, secrétariat, aide aux soins (janvier 2013)</li>
+		<li>Baby-sitting occasionnel</li>
+		<li>Stage de 3ème chez un kinésithérapeute : standard téléphonique, secrétariat, aide aux soins (janvier 2013)</li>
   </ul>
   
-  <ul><b>CENTRES D’INTÉRÊTS</b>
+  <ul class="cv"><b>CENTRES D’INTÉRÊTS</b>
 
-<li>Handball en club (Brunoy)</li>
-<li>Musique (Pop, RnB)</li>
-<li>Cinéma/Séries</li>
-<li>Voyages (Italie – 2012, Crète – 2015)</li>
+		<li>Handball en club (Brunoy)</li>
+		<li>Musique (Pop, RnB)</li>
+		<li>Cinéma/Séries</li>
+		<li>Voyages (Italie – 2012, Crète – 2015)</li>
     
   </ul>
+	</p>
   <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
   <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
   </a>
