--- a/page4.html
+++ b/page4.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <title>Galerie d'images</title>
-  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/style.css">
 </head>
 <body>
-  <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
-	</ul>
+	<nav class="menu">
+  	<ul>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" " id="menu">Acceuil</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" " id="menu">CV</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" " id="menu">Centres d'intérêts</a></li>
+          <li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" " id="menu">Galerie d'images</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" " id="menu">Contact</a></li>
+		</ul>
+	</nav>
 	<table>
 	<tr>
 		<td><img src="./assets/galerie/serie/GoT1.jpg" alt="" id="image" /></td>
