--- a/page5.html
+++ b/page5.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <title>Contact</title>
-  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/style.css">
 </head>
 <body>
-  <ul>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" ">Acceuil</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" ">CV</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" ">Centres d'intérêts</a></li>
-          <li><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" ">Galerie d'images</a></li>
-					<li><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" ">Contact</a></li>
-	</ul>
+	<nav class="menu">
+  	<ul>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page1.html" target=" " id="menu">Acceuil</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page2.html" target=" " id="menu">CV</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page3.html" target=" " id="menu">Centres d'intérêts</a></li>
+          <li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page4.html" target=" " id="menu">Galerie d'images</a></li>
+					<li class="menus"><a href="http://site-romsimon32685065.codeanyapp.com/page5.html" target=" " id="menu">Contact</a></li>
+		</ul>
+	</nav>
 	
 	<form action="http://www.iut-fbleau.fr/sitebp/post.php" method="get">
 		<div>
@@ -39,8 +41,8 @@
 			<label for="message">Message :</label>
     	<textarea name="message" id="message"></textarea>
 		</div>
-    <input type="submit" name="soumission" value="Submit" />
-    <input type="reset" name="soumission" value="Reset" />
+    <input type="submit" name="soumission" value="Submit" id="bouton"/>
+    <input type="reset" name="soumission" value="Reset" id="bouton"/>
 	</form>
 	
 	<a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
