--- a/page1.html
+++ b/page1.html
@@ -23,11 +23,11 @@
     Ce site vous permettra donc d'en apprendre plus sur moi.
   </p>
   <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
-  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png" alt=" " id="sociale">
   </a>
   <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
-  <img src="./assets/Google.png" id="social">
+  <img src="./assets/Google.png" alt=" " id="social">
   </a>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1318.5518310986395!2d2.5627273457269872!3d48.62699834662821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e5e399a2852b77%3A0xd4baa205320418fa!2sIUT+S%C3%A9nart+Fontainebleau!5e0!3m2!1sfr!2sfr!4v1483712081032" width="350" height="200" frameborder="0" style="border:0" allowfullscreen id="map"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1318.5518310986395!2d2.5627273457269872!3d48.62699834662821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e5e399a2852b77%3A0xd4baa205320418fa!2sIUT+S%C3%A9nart+Fontainebleau!5e0!3m2!1sfr!2sfr!4v1483712081032" width="350" height="200" style="border:0" allowfullscreen id="map"></iframe>
 </body>
 </html>
