--- a/page5.html
+++ b/page5.html
@@ -41,7 +41,7 @@
 			<label for="message">Message :</label>
     	<textarea name="message" id="message"></textarea>
 		</div>
-    <input type="submit" name="soumission" value="Submit" id="bouton"/>
+    <input type="submit" name="soumission" value="Envoyer" id="bouton"/>
     <input type="reset" name="soumission" value="Reset" id="bouton"/>
 	</form>
 	
