--- a/page1.html
+++ b/page1.html
@@ -18,8 +18,8 @@
 	<img src="./assets/Moi.JPG" alt=" " id="moi" />
   <p>
     Bonjour, je m'appelle Romain SIMON j'ai 18 ans et je suis actuellement en 1ère année de DUT Informatique à l'IUT Sénart-Fontainebleau (localisation sur google map).
-		Ce site a été crée dans le but d'un projet donné en cours.
-    Vous pourrez retrouver mon CV, mes centres d'intêrets ainsi qu'une galerie d'image qui permettent d'illustrer mes centres d'intérêts, ainsi qu'un formulaire de contact si vous voulez me contacter. 
+		Ce site a été créé dans le but d'un projet donné en cours.
+    Vous pourrez retrouver mon CV, mes centres d'intérêts ainsi qu'une galerie d'image qui me permettra des les illustrer, ainsi qu'un formulaire de contact si vous voulez me contacter. 
     Ce site vous permettra donc d'en apprendre plus sur moi.
   </p>
   <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
