--- a/page2.html
+++ b/page2.html
@@ -20,10 +20,10 @@
 
 		<li>DUT Informatique, 2016 – 2018, IUT Sénart-Fontainebleau, site de Lieusaint</li>
 		<li>Baccalauréat Scientifique Spécialité Physique-Chimie mention Bien (2016), lycée Talma, Brunoy</li>
-		<li>Anglais : niveau scolaire 
-				Sept jours en famille d’accueil à Cardiff (Pays de Galles-voyage scolaire 2012)</li>
-		<li>Espagnol : niveau scolaire 
-				Sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)</li>
+		<li>Anglais : niveau scolaire :
+				sept jours en famille d’accueil à Cardiff (Pays de Galles-voyage scolaire 2012)</li>
+		<li>Espagnol : niveau scolaire : 
+				sept jours en famille d'accueil à Barcelone (Espagne-voyage scolaire 2013)</li>
   </ul>
   
   <ul class="cv"><b>COMPÉTENCES</b>
@@ -48,10 +48,10 @@
   </ul>
 	</p>
   <a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
-  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png" alt=" " id="sociale">
   </a>
   <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
-  <img src="./assets/Google.png" id="social">
+  <img src="./assets/Google.png" alt=" " id="social">
   </a>
 </body>
 </html>
