--- a/page5.html
+++ b/page5.html
@@ -46,10 +46,10 @@
 	</form>
 	
 	<a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
-  	<img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
+  	<img src="./assets/logo-linkedin-pour-cmonsite.png" alt=" " id="sociale">
   </a>
   <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
-  	<img src="./assets/Google.png" id="social">
+  	<img src="./assets/Google.png" alt=" " id="social">
   </a>
 </body>
 </html>
