--- a/page4.html
+++ b/page4.html
@@ -39,8 +39,8 @@
 	</tr>
 	</table>
 
-<a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" alt=" " target="_blank">
-  <img src="./assets/logo-linkedin-pour-cmonsite.png" id="sociale">
+<a href="https://www.linkedin.com/in/romain-simon-814396132?trk=nav_responsive_tab_profile" target="_blank">
+  <img src="./assets/logo-linkedin-pour-cmonsite.png" alt=" " id="sociale">
 </a>
 <a href="https://plus.google.com/u/0/100949654576113984046" target="_blank">
   <img src="./assets/Google.png" alt=" " id="social">
